feat: add memory decay/merge SPI + langgraph4j Store adapter integration